kuber-homeworks/2.3/configmap-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
          name: nginx-configmap
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
      volumes:
      - name: nginx-configmap
        configMap:
          name: nginx-configmap
